src/test/deca/context/valid/oracle/type_binary_op_gt.deca
{
    int a;
    int b;
    float c;
    float d;
    a > b;
    a > c;
    c > a;
    c > d;
}