src/test/deca/context/invalid/ext/TAB_match_dim6.deca
{
    int[][] a = new int[2][3];
    float[][] b = a;
}